test/scc_test/decl/semantic-errors/014.a
014.t:7:9: error: redefinition of 'a'